ansible/roles/kube-ingress/files/default-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ygdrassil.proyectopqmc.com
    http:
      paths:
      - path: "/"
        backend:
          serviceName: hello-world
          servicePort: 8080
